# brainfk-rs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: release.yaml
benches/: wasm_benchmark.rs
benchmarks/: BENCHMARK.md
src/: compiler.rs  lang.rs  lib.rs  main.rs
src/cmd/: cmd.rs  mod.rs
tests/: cli.rs
tests/files/: hello.stdout  mandelbrot.stdout  squares.stdout
