[package]
authors = ["Kartik Sharma <kartik.sharma522@gmail.com>"]
categories = ["compiler", "command-line-utilities"]
description = "A brainfuck compiler which compiles to raw wasm"
name = "brainfk-rs"
license = "MIT"
version = "0.1.1"
repository = "https://github.com/crazystylus/brainfk-rs.git"
edition = "2021"

[dependencies]
clap = { version = "3.2.2", features = ["derive"] }
wasm-encoder = "0.13"
wasmer = { version = "2.3.0", features = ["default", "llvm", "singlepass"] }
wasmer-wasi = "2.3.0"
wasmparser = "0.86.0"

[dev-dependencies]
assert_cmd = "2.0"
predicates = "2.1"

[profile.release]
strip = "symbols"
lto = true
opt-level = "s"
debug = false
codegen-units = 1
